--- a/src/CFW.Core.Testings/CFW.Core.Testings.csproj
+++ b/src/CFW.Core.Testings/CFW.Core.Testings.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Bogus" Version="35.6.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
+    <PackageReference Include="xunit" Version="2.9.2" />
   </ItemGroup>
 
   <ItemGroup>
