--- a/tests/CFW.ODataCore.Tests/CFW.ODataCore.Tests.csproj
+++ b/tests/CFW.ODataCore.Tests/CFW.ODataCore.Tests.csproj
@@ -17,10 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\modules\CFW.Core\CFW.Core.csproj" />
+    <ProjectReference Include="..\..\modules\CFW.Identity\CFW.Identity.csproj" />
+    <ProjectReference Include="..\..\modules\CFW.ODataCore\CFW.ODataCore.csproj" />
     <ProjectReference Include="..\CFW.Core.Testings\CFW.Core.Testings.csproj" />
-    <ProjectReference Include="..\CFW.Core\CFW.Core.csproj" />
-    <ProjectReference Include="..\CFW.Identity\CFW.Identity.csproj" />
-    <ProjectReference Include="..\CFW.ODataCore\CFW.ODataCore.csproj" />
   </ItemGroup>
 
   <ItemGroup>
