--- a/tests/CFW.ODataCore.Testings/CFW.ODataCore.Testings.csproj
+++ b/tests/CFW.ODataCore.Testings/CFW.ODataCore.Testings.csproj
@@ -31,4 +31,8 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
   </ItemGroup>
 
+	<PropertyGroup>
+		<GenerateProgramFile>false</GenerateProgramFile>
+	</PropertyGroup>
+
 </Project>
