--- a/tests/CFW.ODataCore.Testings/CFW.ODataCore.Testings.csproj
+++ b/tests/CFW.ODataCore.Testings/CFW.ODataCore.Testings.csproj
@@ -20,7 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\modules\CFW.Core\CFW.Core.csproj" />
     <ProjectReference Include="..\..\modules\CFW.ODataCore\CFW.ODataCore.csproj" />
-    <ProjectReference Include="..\CFW.Core.Testings\CFW.Core.Testings.csproj" />
+    <ProjectReference Include="..\CFW.CoreTestings\CFW.CoreTestings.csproj" />
   </ItemGroup>
 
   <ItemGroup>
