--- a/modules/CFW.ODataCore/CFW.ODataCore.csproj
+++ b/modules/CFW.ODataCore/CFW.ODataCore.csproj
@@ -1,14 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-	  <TargetFramework>net8.0</TargetFramework>
 	  <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <OutputType>Library</OutputType>
+    <TargetFramework>net8.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>EntityMinimalApi</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>huynhtandat223</Authors>
+    <Description>EntityMinimalApi is a lightweight library for creating CRUD APIs using Entity Framework Core, OData, and .NET Minimal APIs. Simplify modern API development with an intuitive and flexible approach.</Description>
+    <PackageTags>CRUD;API;MinimalAPI;EntityFramework;OData;DotNet</PackageTags>
+    <RepositoryUrl>https://github.com/huynhtandat223/entity-mimimal-api</RepositoryUrl>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <!--<PackageReference Include="Microsoft.AspNetCore.OData" Version="8.2.7" />-->
     <PackageReference Include="Microsoft.AspNetCore.OData" Version="8.2.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
     <PackageReference Include="System.Text.Json" Version="8.0.5" />
