Fix nuget sources

--- a/tests/CFW.EntityMimimalApi.Samples/CFW.EntityMimimalApi.Samples.csproj
+++ b/tests/CFW.EntityMimimalApi.Samples/CFW.EntityMimimalApi.Samples.csproj
@@ -7,13 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityMinimalApi" Version="1.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.11" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\modules\CFW.ODataCore\CFW.ODataCore.csproj" />
   </ItemGroup>
 
 </Project>
