--- a/modules/CFW.ODataCore/CFW.ODataCore.csproj
+++ b/modules/CFW.ODataCore/CFW.ODataCore.csproj
@@ -6,14 +6,27 @@
     <OutputType>Library</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageId>EntityMinimalApi</PackageId>
-    <Version>1.0.0</Version>
-    <Authors>huynhtandat223</Authors>
+    <PackageId>CFW.EntityMinimalApi</PackageId>
+    <Version>1.0.2</Version>
+    <Authors>dat.ht</Authors>
     <Description>EntityMinimalApi is a lightweight library for creating CRUD APIs using Entity Framework Core, OData, and .NET Minimal APIs. Simplify modern API development with an intuitive and flexible approach.</Description>
     <PackageTags>CRUD;API;MinimalAPI;EntityFramework;OData;DotNet</PackageTags>
     <RepositoryUrl>https://github.com/huynhtandat223/entity-mimimal-api</RepositoryUrl>
     <IsPackable>true</IsPackable>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OData" Version="8.2.7" />
