--- a/tests/CFW.ODataCore.Testings/CFW.ODataCore.Testings.csproj
+++ b/tests/CFW.ODataCore.Testings/CFW.ODataCore.Testings.csproj
@@ -36,4 +36,8 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Payments\" />
+  </ItemGroup>
+
 </Project>
